2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c: Use a bool when possible instead of int integers.
	* src/faillog.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.
	* src/faillog.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/faillog.c: Add brackets and parenthesis.

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Avoid multi-statements lines.
	* src/login.c: Ignore the return value of pam_end() before
	exiting.
	* src/login.c: Use a bool when possible instead of int integers.
	* src/login.c: Add brackets and parenthesis.
	* src/login.c: Ignore the return values of fflush(), putchar(), puts().
	* src/login.c: Ignore the return value of fclose() for read-only
	files.
	* src/login.c: Avoid assignments in comparisons.
	* src/login.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/login.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: Use a bool when possible instead of int integers.
	* src/chage.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupadd.c: Use a bool when possible instead of int
	integers.
	* src/groupadd.c: Add brackets and parenthesis.
	* src/groupadd.c: Avoid implicit conversion of pointers / integers
	/ chars to booleans.
	* src/groupadd.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().
	* src/groupadd.c: Ignore the return value of pam_end() before
	exiting.

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Use a bool when possible instead of int integers.
	* src/pwck.c: Ignore return value of setlocale(),
	bindtextdomain(), and textdomain().

2008-06-10  Nicolas François  <nicolas.francois@centraliens.net>
